<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuHome"
        android:title="@string/home"
        android:icon="@drawable/icon_home"
        />

    <item
        android:id="@+id/menuMaps"
        android:title="@string/maps"
        android:icon="@drawable/icon_map"
        />

    <item
        android:title=""
        />

    <item
        android:id="@+id/menuFavourite"
        android:title="@string/favourites"
        android:icon="@drawable/icon_favorite"
        />


    <item
        android:id="@+id/menuAccount"
        android:title="@string/account"
        android:icon="@drawable/icon_account"
        />

</menu>