<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".activities.AccountAndSecurityActivity">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/bold"
            android:text="@string/account_security"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutHeader"
        android:layout_marginTop="@dimen/_30sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/medium"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            tools:ignore="RelativeOverlap,TextSizeCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon_next" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutDeactivateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutChangePassword"
        android:layout_marginTop="@dimen/_15sdp">

        <TextView
            android:id="@+id/txtDeactivateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/deactivate_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            tools:ignore="RelativeOverlap,TextSizeCheck" />

        <TextView
            android:layout_width="@dimen/_215sdp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDeactivateAccount"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="@font/regular"
            android:text="@string/temporarily_deactivate_your_account_easily_reactivate_when_you_re_ready"
            android:textColor="@color/gray"
            android:textSize="@dimen/_10sdp"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon_next" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutDeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutDeactivateAccount"
        android:layout_marginTop="@dimen/_15sdp">

        <TextView
            android:id="@+id/txtDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/delete_account"
            android:textColor="@color/red"
            android:textSize="@dimen/_12sdp"
            tools:ignore="RelativeOverlap,TextSizeCheck,TextContrastCheck" />

        <TextView
            android:layout_width="@dimen/_215sdp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDeleteAccount"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="@font/regular"
            android:text="@string/permanently_remove_your_account_and_data_proceed_with_caution"
            android:textColor="@color/gray"
            android:textSize="@dimen/_10sdp"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon_next" />

    </RelativeLayout>

</RelativeLayout>