<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_20sdp"
    tools:context=".activities.SignInActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/layoutTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/icon_foot"
                    app:tint="@color/orange"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/strt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/bold"
                    android:text="@string/let_s_get_started"
                    android:textSize="@dimen/_24sdp" />

                <TextView
                    android:id="@+id/dive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/regular"
                    android:text="@string/lets_dive_into_your_account"
                    android:textColor="#474343"
                    android:textSize="@dimen/_14sdp"
                    tools:ignore="TextSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutTxt"
                android:gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/enter_email"
                        app:boxStrokeColor="@color/orange"
                        app:hintTextColor="@color/orange">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/regular"
                            android:inputType="textEmailAddress"
                            android:textCursorDrawable="@color/orange"
                            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/enter_password"
                        app:boxStrokeColor="@color/orange"
                        app:hintTextColor="@color/orange">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/regular"
                            android:inputType="textPassword"
                            android:textCursorDrawable="@color/orange"
                            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:fontFamily="@font/medium"
                        android:text="@string/sign_in"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        tools:ignore="TextSizeCheck,TextContrastCheck,VisualLintButtonSize" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/medium"
                            android:text="@string/create_an_account"
                            android:textSize="@dimen/_12sdp"
                            tools:ignore="TextSizeCheck" />

                        <TextView
                            android:id="@+id/txtSignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_3sdp"
                            android:fontFamily="@font/bold"
                            android:text="@string/sign_up"
                            android:textColor="@color/orange"
                            android:textSize="@dimen/_12sdp"
                            tools:ignore="TextSizeCheck,TextContrastCheck" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>